<resources>
    <string name="app_name">My Application</string>
    <string name="info">Temel Komutlar Ünite 3 - Uygulamalar</string>
    <string name="info2">Temel Komutlar Layout</string>
    <string name="uyg2">int, long vb. komutlar</string>
    <string name="uyg3">char komutu 1</string>
    <string name="uyg4">char komutu 2</string>
    <string name="uyg5">Ondalıklı Değişkenler</string>
    <string name="uyg6">Final Sabit Değer</string>
    <string name="uyg7">Aritmetiksel Operatörler</string>
    <string name="uyg8">Atama Operatörleri</string>
    <string name="uyg9">Karşılaştırma Operatörleri</string>
    <string name="uyg10">Mantıksal Operatorler</string>
    <string name="uyg11">Logcat</string>
    <string name="uyg12">HATA DÜZELTME</string>
    <string name="uyg1">Mantıksal Operatörler</string>
    <string name="g_nder">Gönder</string>
</resources>